# ZorbaDocker

mongo2/: CMakeLists.txt
mongo2/cmake_modules/: FindLibMongodb.cmake
mongo2/src/: CMakeLists.txt  mongo2.xq
mongo2/src/mongo2.xq.src/: mongo2.cpp  mongo2.h
scripts/: dockerscript.sh  installscript.sh  runcmake.sh  test2.xq
scripts/confs/: mongod.conf  php.ini
scripttesting/: correctnames.sh  is1.sh  is2.sh  mongotest2.cpp  test.xq
